--- a/content/projects/2018-06-18-final-presentation.Rmd
+++ b/content/projects/2018-06-18-final-presentation.Rmd
@@ -11,4 +11,6 @@ lobsters_id: ''
 meta_img: /images/image.jpg
 ---
 
-My final presentation is available [here]('https://mpomaville.netlify.com/slides/2018-06-18-final-presentation.html')
+```{r echo = FALSE}
+knitr::include_url('../../slides/2018-06-18-final-presentation.html')
+```
